packages/svelte/tests/validator/samples/no-runes-mode/input.svelte
<script>
    import { state } from './store';
    const x = $state();
</script>

{x}
