packages/svelte/tests/compiler-errors/samples/class-state-field-static/main.svelte
<script>
	class X {
		static x = $state();
	}
</script>
